<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_view_bkg"
    android:gravity="center_vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Button
	        android:id="@+id/list_dialog_listview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/str_list_dialog_list_btn"
	        android:padding="8dip" />
	    <TextView
	        android:id="@+id/list_dialog_listview_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/str_list_dialog_list_def_txt"
	        android:padding="8dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
        android:id="@+id/list_dialog_expandable_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_list_dialog_exp_list_btn"
        android:padding="8dip" />
	    <TextView
	        android:id="@+id/list_dialog_expandable_listview_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/str_list_dialog_exp_list_def_txt"
	        android:padding="8dip" />
    </LinearLayout>    

    
</LinearLayout>